<resources>
    <string name="app_name">Chicago Affordable Housing App</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">normal</string>
    <string name="hybrid_map">satellite</string>
    <string name="satellite_map">satellite</string>
    <string name="terrain_map">terrain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="community_types">Community Types</string>
    <string name="loading_locations">Loading locations</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="property_types">Filter by Property Type</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="location_favorites_text">Location Favorites</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_refresh">Refresh</string>
    <string name="no_results">No results</string>
    <string name="widget_icon">widget icon</string>
    <string name="add_a_note">Add a note</string>
    <string name="menu_for_editing_notes">Menu for editing notes.</string>
    <string name="chicago_affordable_housing">Chicago Affordable Housing</string>
    <string name="header">Header</string>
    <string name="property_name">Property name</string>
    <string name="location_address">Location address</string>
    <string name="management_company">Management company</string>
    <string name="number_of_units">Number of units</string>
    <string name="property_type">Property type</string>
    <string name="phone_number">Phone number</string>
    <string name="favorite_button">Favorite button</string>
    <string name="add_a_note_button">Add a note button</string>
    <string name="edit_note">Edit note</string>
    <string name="adddress_and_property_type">Adddress and property type</string>
    <string name="info">Info</string>
    <string name="chicago_data_portal">Chicago Data Portal</string>
    <string name="chicago_data_info">The data displayed in this app is derived from the Chicago Data Portal. It does not constitute a complete list of affordable housing in Chicago. For information on affordable rental properties in Chicago and Illinois, call (877) 428-8844 or visit http://www.ilhousingsearch.org/.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="community">Community</string>
    <string name="filter">Filter</string>
    <string name="list">List</string>
    <string name="home">Home</string>
    <string name="reset">Reset</string>
    <string name="splash_screen_icon">Splash screen icon</string>
    <string name="property_name_for_of_favorite_location">Property name for of favorite location.</string>
    <string name="added_to_favorites">added to favorites.</string>
    <string name="removed_from_favorites">removed from favorites.</string>
    <string name="save_note">Save</string>
    <string name="cancel_note">Cancel</string>
    <string name="marker_type_label">Type:</string>
    <string name="property_type_click_listener_exception">must implement PropertyTypeClickListener.</string>
    <string name="loading_notes">Loading notes...</string>
    <string name="notes">Notes</string>
    <string name="location_list">Location List</string>
    <string name="add_note">Add Note</string>
    <string name="information">Information</string>
    <string name="chicago_data_disclaimer">This application uses data that has been modified for use from its original source, www.cityofchicago.org, the official website of the City of Chicago. The City of Chicago makes no claims as to the content, accuracy, timeliness, or completeness of any of the data provided. The data provided in this application is subject to change at any time. It is understood that the data provided by this application is being used at one’s own risk.</string>
</resources>
