<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/drawer_actions">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_star_24px"
            android:title="@string/nav_favorites" />
    </group>

    <item android:title="Information">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_round_info_24px"
                android:title="@string/info" />
            <item
                android:id="@+id/nav_chicago_data"
                android:icon="@drawable/ic_round_open_in_browser_24px"
                android:title="@string/chicago_data_portal" />
        </menu>
    </item>

</menu>
