<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tv_no_results"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_results"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold|italic"
            android:textSize="24sp"
            android:textAlignment="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/loading_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_locations"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_location_list"
        android:contentDescription="@string/location_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        app:visibleGone="@{!isLoading}">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>
</layout>